# bessel

./: bessel.c  bessel.h  bessel.pro  dialog.ui  graph.cpp  graph.h
src/: CMakeLists.txt  bessel.cpp  besselview.h  main.cpp
src/bessel_gui/: CMakeLists.txt  besselview.cpp  besselview.h  dialog.ui
src/bessel_table/: CMakeLists.txt  bessel.cpp
